@@ -2,19 +2,22 @@ package greencity.filters;
 
 import greencity.dto.user.UserManagementViewDto;
 import greencity.entity.User;
-import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.Test;
-import org.mockito.Mock;
-import org.mockito.MockitoAnnotations;
-
-import javax.persistence.criteria.*;
+import jakarta.persistence.criteria.CriteriaBuilder;
+import jakarta.persistence.criteria.CriteriaQuery;
+import jakarta.persistence.criteria.Expression;
+import jakarta.persistence.criteria.Path;
+import jakarta.persistence.criteria.Predicate;
+import jakarta.persistence.criteria.Root;
 import java.util.ArrayList;
 import java.util.List;
-
-import static org.junit.jupiter.api.Assertions.*;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.eq;
+import org.mockito.Mock;
 import static org.mockito.Mockito.when;
+import org.mockito.MockitoAnnotations;
 
 class CustomSpecificationTest {
     @Mock
@@ -79,12 +82,12 @@ class CustomSpecificationTest {
 
     @Test
     void getIdPredicate() {
-        when(root.get(searchCriteriaList.get(0).getKey())).thenReturn(objectPathExpected);
-        when(criteriaBuilder.equal(objectPathExpected, searchCriteriaList.get(0).getValue()))
+        when(root.get(searchCriteriaList.getFirst().getKey())).thenReturn(objectPathExpected);
+        when(criteriaBuilder.equal(objectPathExpected, searchCriteriaList.getFirst().getValue()))
             .thenThrow(NumberFormatException.class);
         when(criteriaBuilder.conjunction()).thenReturn(expected);
         when(criteriaBuilder.disjunction()).thenReturn(expected);
-        Predicate actual = userSpecification.getIdPredicate(root, criteriaBuilder, searchCriteriaList.get(0));
+        Predicate actual = userSpecification.getIdPredicate(root, criteriaBuilder, searchCriteriaList.getFirst());
         assertEquals(expected, actual);
     }
 
